--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build":"node build"
+    "icons":"node build"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
